--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,15 @@ body {
     background: none;
     top: 20px;
     left: 20px;
+    max-width: 0;
+    width: 0;
+    height: 0;
+    max-height: 0;
+    padding: 0;
+    margin: 0;
     outline: none;
     border: none;
+    color: transparent;
     overflow: hidden;
     box-sizing: border-box; }
   .manuscript_paper .blinking {
@@ -57,6 +64,29 @@ body {
     opacity: 0; }
   100% {
     opacity: 1; } }
+.manuscript_paper_button {
+  position: relative;
+  width: 200px;
+  height: 30px;
+  line-height: 30px;
+  background: #639bd6;
+  border: 2px solid #5790cc;
+  border-radius: 4px;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto; }
+  .manuscript_paper_button:before {
+    content: "背景を透明化する";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block; }
+  .manuscript_paper_button.hide:before {
+    content: "背景を表示する"; }
+
 @media screen and (max-width: 767px) {
   #main {
     width: 100%;
