--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,15 +38,15 @@ body {
         background: none;
         top: 20px;
         left: 20px;
-        // max-width: 0;
-        // width: 0;
-        // height: 0;
-        // max-height: 0;
-        // padding: 0;
-        // margin: 0;
+        max-width: 0;
+        width: 0;
+        height: 0;
+        max-height: 0;
+        padding: 0;
+        margin: 0;
         outline: none;
         border: none;
-        // color: rgba(0, 0, 0, 0);
+        color: rgba(0, 0, 0, 0);
         overflow: hidden;
         box-sizing: border-box;
     }
@@ -70,6 +70,31 @@ body {
     }
 }
 
+.manuscript_paper_button {
+    position: relative;
+    width: 200px;
+    height: 30px;
+    line-height: 30px;
+    background: #639bd6;
+    border: 2px solid #5790cc;
+    border-radius: 4px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
+    &:before {
+        content: "背景を透明化する";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+    &.hide:before {
+        content: "背景を表示する";
+    }
+}
 
 
 @media screen and (max-width:767px){
