--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,15 +38,17 @@ body {
         background: none;
         top: 20px;
         left: 20px;
-        max-width: 0;
-        width: 0;
-        height: 0;
-        max-height: 0;
-        padding: 0;
-        margin: 0;
+        width: 100%;
+        height: 30px;
+        // max-width: 0;
+        // width: 0;
+        // height: 0;
+        // max-height: 0;
+        // padding: 0;
+        // margin: 0;
         outline: none;
         border: none;
-        color: rgba(0, 0, 0, 0);
+        // color: rgba(0, 0, 0, 0);
         overflow: hidden;
         box-sizing: border-box;
     }
