--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,10 @@ body {
     left: 20px;
     width: 100%;
     height: 30px;
+    font-size: 20px;
     outline: none;
     border: none;
+    color: transparent;
     overflow: hidden;
     box-sizing: border-box; }
   .manuscript_paper .blinking {
