--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,7 @@ body {
         left: 20px;
         width: 100%;
         height: 30px;
+        font-size: 20px;
         // max-width: 0;
         // width: 0;
         // height: 0;
@@ -48,7 +49,7 @@ body {
         // margin: 0;
         outline: none;
         border: none;
-        // color: rgba(0, 0, 0, 0);
+        color: rgba(0, 0, 0, 0);
         overflow: hidden;
         box-sizing: border-box;
     }
