--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,25 +34,7 @@ body {
             left: 20px;
         }
     }
-    textarea {
-        background: none;
-        top: 20px;
-        left: 20px;
-        width: 100%;
-        height: 30px;
-        font-size: 20px;
-        // max-width: 0;
-        // width: 0;
-        // height: 0;
-        // max-height: 0;
-        // padding: 0;
-        // margin: 0;
-        outline: none;
-        border: none;
-        color: rgba(0, 0, 0, 0);
-        overflow: hidden;
-        box-sizing: border-box;
-    }
+
     /* 点滅 */
     .blinking {
     	-webkit-animation:blink 0.7s infinite alternate;
@@ -99,10 +81,39 @@ body {
     }
 }
 
+.manuscript_paper_textarea {
+    background: none;
+    top: 20px;
+    left: 20px;
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    // max-width: 0;
+    // width: 0;
+    // height: 0;
+    // max-height: 0;
+    // padding: 0;
+    // margin: 0;
+    outline: none;
+    border: none;
+    color: rgba(0, 0, 0, 0);
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
 
 @media screen and (max-width:767px){
     #main {
         width: 100%;
         max-width: 100%;
+    }
+
+    .manuscript_paper_wrap {
+        width: 100%;
+        overflow-x: scroll;
+        .manuscript_paper {
+            max-width: 150%;
+            width: 150%;
+        }
     }
 }
