--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,10 @@ body {
   top: 20px;
   left: 20px;
   width: 100%;
-  height: 30px;
+  height: 1px;
   font-size: 20px;
+  padding: 0;
+  margin: 0;
   outline: none;
   border: none;
   color: transparent;
@@ -94,7 +96,7 @@ body {
     width: 100%;
     overflow-x: scroll; }
     .manuscript_paper_wrap .manuscript_paper {
-      max-width: 150%;
-      width: 150%; } }
+      max-width: 180%;
+      width: 180%; } }
 
 /*# sourceMappingURL=style.css.map */
