--- a/scss/style.scss
+++ b/scss/style.scss
@@ -92,6 +92,7 @@ body {
     // width: 0;
     // height: 0;
     // max-height: 0;
+    opacity: 0;
     padding: 0;
     margin: 0;
     outline: none;
