--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,142 +12,15 @@ body {
     padding: 20px 0;
 }
 
-.manuscript_paper {
-    padding: 20px;
-    box-sizing: border-box;
-    position: relative;
-    &:before, &:after {
-        position: absolute;
-        content: '';
-        top: 21px;
-        width: 18px;
-        height: calc(100% - 48px);
-        background: white;
-        display: block;
-        z-index: 10;
-    }
-    &:before {
-        left: 21px;
-    }
-    &:after {
-        right: 20px;
-    }
-    canvas {
-        max-width: 100%;
-        width: 100%;
-        height: 500px;
-        background: white;
-        &.manuscript_paper_letter {
-            border: 1px solid #e4e4e4;
-            &.focus {
-                box-shadow: 1px 1px 4px 0px #f3f3f3;
-            }
-        }
-        &.manuscript_paper_letter, &.manuscript_paper_cursor {
-            background: none;
-            position: absolute;
-            top: 20px;
-            left: 20px;
-        }
-    }
-
-    /* 点滅 */
-    .blinking {
-    	-webkit-animation:blink 0.7s infinite alternate;
-        -moz-animation:blink 0.7s infinite alternate;
-        animation:blink 0.7s infinite alternate;
-    }
-    @-webkit-keyframes blink {
-        0% {opacity:0;}
-        100% {opacity:1;}
-    }
-    @-moz-keyframes blink {
-        0% {opacity:0;}
-        100% {opacity:1;}
-    }
-    @keyframes blink {
-        0% {opacity:0;}
-        100% {opacity:1;}
-    }
-}
-
-.manuscript_paper_button {
-    position: relative;
-    width: 200px;
-    height: 30px;
-    line-height: 30px;
-    background: #639bd6;
-    border: 2px solid #5790cc;
-    border-radius: 4px;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    margin: 0 auto;
-    &:before {
-        content: "背景を透明化する";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: block;
-    }
-    &.hide:before {
-        content: "背景を表示する";
-    }
-}
-
-.manuscript_paper_textarea {
-    background: none;
-    top: 20px;
-    left: 20px;
-    width: 100%;
-    height: 1px;
-    font-size: 20px;
-    // max-width: 0;
-    // width: 0;
-    // height: 0;
-    // max-height: 0;
-    opacity: 0;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    border: none;
-    color: rgba(0, 0, 0, 0);
-    overflow: hidden;
-    box-sizing: border-box;
-}
-
-
-@media screen and (max-width:767px){
-    #main {
-        width: 100%;
-        max-width: 100%;
-    }
-
-    .manuscript_paper_wrap {
-        width: 100%;
-        overflow-x: scroll;
-        .manuscript_paper {
-            max-width: 200%;
-            width: 200%;
-        }
-    }
-}
-
-
-
-
 
 .manuscript_paper_input_wrap {
-    font-family: monospace, serif;
     width: calc(100% - 40px);
-    height: calc(20em + 20px + 42px);
-    background: #dfdfdf;
+    height: calc(20em + 40px + 36px);
     box-sizing: border-box;
+    color: #5a5a5a;
+    box-shadow: 1px 1px 4px 1px #d6d6d6a8;
     text-align: left;
     margin: 20px;
-    padding: 10px;
     letter-spacing: 2px;
     line-height: 2rem;
     writing-mode: tb-rl;
@@ -155,5 +28,66 @@ body {
     -moz-writing-mode: vertical-rl;
     -o-writing-mode: vertical-rl;
     -webkit-writing-mode: vertical-rl;
-    text-orientation: upright;
+    word-break: break-all;
+    overflow-wrap: break-word;
+    position: relative;
+    font-family: monospace, serif;
+
+    & > div {
+        width: 100%;
+        height: 100%;
+        padding: 10px 10px 26px 10px;
+        box-sizing: border-box;
+        word-break: break-all;
+        overflow-wrap:break-word
+    }
+
+    .manuscript_paper_input {
+        background: #f7f7f7;
+    }
+
+    .manuscript_paper_view {
+        background: white;
+        position: absolute;
+        top: 0;
+        right: 0;
+
+        span {
+            position: relative;
+            font-size: 0;
+            display: inline-block;
+            letter-spacing: 0;
+
+            &:before {
+                position: absolute;
+                content: "、";
+                right: 0;
+                top: 0;
+                width: 1em;
+                height: 1em;
+                font-size: 1rem;
+            }
+        }
+    }
+}
+
+
+
+@media screen and (max-width:767px){
+    #main {
+        width: 100%;
+        max-width: 100%;
+    }
+    .manuscript_paper_input_wrap {
+        height: calc(20em + 40px);
+        letter-spacing: 0;
+        font-size: 14px;
+        & > div {
+            padding: 10px 10px 24px 10px;
+        }
+        .manuscript_paper_input {
+        }
+        .manuscript_paper_view {
+        }
+    }
 }
