--- a/css/fonts/styles.css
+++ b/css/fonts/styles.css
@@ -443,79 +443,4 @@
 .icons8---:before {
   content: ""; }
 
-body {
-  background: #dfdfdf; }
-
-#main {
-  width: 100%;
-  max-width: 768px;
-  min-height: 1000px;
-  text-align: center;
-  background: #fff;
-  margin: 0 auto;
-  padding: 20px 0; }
-
-.manuscript_paper_input_wrap {
-  width: calc(100% - 40px);
-  height: calc(20em + 40px + 36px);
-  box-sizing: border-box;
-  color: #5a5a5a;
-  box-shadow: 1px 1px 4px 1px #d6d6d6a8;
-  text-align: left;
-  margin: 20px;
-  letter-spacing: 2px;
-  line-height: 2rem;
-  writing-mode: tb-rl;
-  writing-mode: vertical-rl;
-  -moz-writing-mode: vertical-rl;
-  -o-writing-mode: vertical-rl;
-  -webkit-writing-mode: vertical-rl;
-  text-orientation: upright;
-  word-break: break-all;
-  overflow-wrap: break-word;
-  position: relative;
-  font-family: "Favorites", monospace, serif; }
-  .manuscript_paper_input_wrap > div {
-    width: 100%;
-    height: 100%;
-    padding: 10px 10px 26px 10px;
-    box-sizing: border-box;
-    word-break: break-all;
-    overflow-wrap: break-word; }
-  .manuscript_paper_input_wrap .manuscript_paper_input {
-    background: #f7f7f7; }
-  .manuscript_paper_input_wrap .manuscript_paper_view {
-    background: white;
-    position: absolute;
-    top: 0;
-    right: 0; }
-    .manuscript_paper_input_wrap .manuscript_paper_view span {
-      position: relative;
-      font-size: 0;
-      display: inline-block;
-      letter-spacing: 0; }
-      .manuscript_paper_input_wrap .manuscript_paper_view span:before {
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 1em;
-        height: 1em;
-        font-size: 1rem; }
-      .manuscript_paper_input_wrap .manuscript_paper_view span.hanging_comma:before {
-        content: "、"; }
-      .manuscript_paper_input_wrap .manuscript_paper_view span.hanging_period:before {
-        content: "。"; }
-
-@media screen and (max-width: 767px) {
-  #main {
-    width: 100%;
-    max-width: 100%; }
-
-  .manuscript_paper_input_wrap {
-    height: calc(20em + 40px);
-    letter-spacing: 0;
-    font-size: 14px; }
-    .manuscript_paper_input_wrap > div {
-      padding: 10px 10px 24px 10px; } }
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=styles.css.map */
