fix: スクロールとページング機能を実装

--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,7 @@ body {
   box-shadow: 1px 1px 4px 1px #d6d6d6a8;
   text-align: left;
   margin: 20px;
+  margin-bottom: 0;
   letter-spacing: 2px;
   line-height: 2rem;
   writing-mode: tb-rl;
@@ -481,7 +482,9 @@ body {
     padding: 10px 10px 26px 10px;
     box-sizing: border-box;
     word-break: break-all;
-    overflow-wrap: break-word; }
+    overflow-wrap: break-word;
+    overflow-x: auto;
+    overflow-y: hidden; }
   .manuscript_paper_input_wrap .manuscript_paper_input {
     background: #f7f7f7; }
   .manuscript_paper_input_wrap .manuscript_paper_view {
@@ -506,6 +509,12 @@ body {
       .manuscript_paper_input_wrap .manuscript_paper_view span.hanging_period:before {
         content: "。"; }
 
+.manuscript_paper_page {
+  width: 100%;
+  padding: 15px;
+  text-align: center;
+  box-sizing: border-box; }
+
 @media screen and (max-width: 767px) {
   #main {
     width: 100%;
@@ -514,8 +523,6 @@ body {
   .manuscript_paper_input_wrap {
     height: calc(20em + 40px);
     letter-spacing: 0;
-    font-size: 14px; }
-    .manuscript_paper_input_wrap > div {
-      padding: 10px 10px 24px 10px; } }
+    font-size: 14px; } }
 
 /*# sourceMappingURL=style.css.map */
