--- a/css/style.css
+++ b/css/style.css
@@ -443,9 +443,6 @@
 .icons8---:before {
   content: ""; }
 
-body {
-  background: #dfdfdf; }
-
 #main {
   width: 100%;
   max-width: 768px;
@@ -514,6 +511,58 @@ body {
   padding: 15px;
   text-align: center;
   box-sizing: border-box; }
+
+.saveText, .copyText {
+  width: calc(100% - 40px);
+  background: #0068b7;
+  outline: none;
+  border: none;
+  margin: 20px 20px 0 20px;
+  box-sizing: border-box;
+  color: white;
+  padding: 5px 10px;
+  font-weight: bold;
+  box-shadow: 1px 1px 4px 1px #9c9c9ca8; }
+
+.manuscript_paper_bar_wrap {
+  margin: 0 20px 20px 20px;
+  width: calc(100% - 40px);
+  height: 60px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  background: #f9f9f9;
+  -ms-overflow-style: none;
+  scrollbar-width: none; }
+  .manuscript_paper_bar_wrap::-webkit-scrollbar {
+    display: none; }
+  .manuscript_paper_bar_wrap .manuscript_paper_bar {
+    width: 100%;
+    height: 100%;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    -webkit-text-combine: horizontal;
+    -ms-text-combine-horizontal: all;
+    text-combine-upright: all;
+    text-align: right;
+    padding: 0 10px 30px 10px;
+    box-sizing: border-box;
+    letter-spacing: 2px;
+    line-height: 2rem;
+    font-family: "Favorites", monospace, serif; }
+
+.copyText {
+  background: #bbb; }
+
+input[name="emc_title"] {
+  width: calc(100% - 40px);
+  background: none;
+  outline: none;
+  border: none;
+  margin: 20px 20px 0 20px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 4px 1px #d6d6d6a8; }
+  input[name="emc_title"]::placeholder {
+    color: #9c9c9c; }
 
 @media screen and (max-width: 767px) {
   #main {
