--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,5 @@
 @import "fonts/styles.scss";
 
-body {
-    background: #dfdfdf;
-}
-
 #main {
     width: 100%;
     max-width: 768px;
@@ -91,7 +87,68 @@ body {
     box-sizing: border-box;
 }
 
+.saveText, .copyText {
+    width: calc(100% - 40px);
+    background: #0068b7;
+    outline: none;
+    border: none;
+    margin: 20px 20px 0 20px;
+    box-sizing: border-box;
+    color: white;
+    padding: 5px 10px;
+    font-weight: bold;
+    box-shadow: 1px 1px 4px 1px #9c9c9ca8;
+}
 
+.manuscript_paper_bar_wrap {
+    margin: 0 20px 20px 20px;
+    width: calc(100% - 40px);
+    height: 40px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    background: #f9f9f9;
+    box-sizing: border-box;
+
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display:none;
+    }
+    .manuscript_paper_bar {
+        padding: 10px;
+        width: 100%;
+        height: 100%;
+        -ms-writing-mode: tb-rl;
+        writing-mode: vertical-rl;
+        -webkit-text-combine: horizontal;
+        -ms-text-combine-horizontal: all;
+        text-combine-upright: all;
+        text-align: right;
+        box-sizing: border-box;
+        letter-spacing: 2px;
+        line-height: 2rem;
+        font-family: "Favorites", monospace, serif;
+        // background: repeating-linear-gradient( 90deg, red 0, red 1px, white 1px, white 100px);
+        // background-position: top right;
+    }
+}
+
+.copyText {
+    background: #bbb;
+}
+
+input[name="emc_title"] {
+    width: calc(100% - 40px);
+    background: none;
+    outline: none;
+    border: none;
+    margin: 20px 20px 0 20px;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 4px 1px #d6d6d6a8;
+    &::placeholder {
+      color: #9c9c9c;
+    }
+}
 
 @media screen and (max-width:767px){
     #main {
@@ -107,6 +164,10 @@ body {
         .manuscript_paper_input {
         }
         .manuscript_paper_view {
+            // &:after {
+            //     right: 4px;
+            //     width: calc(200% - 8px);
+            // }
         }
     }
 }
